--- a/src/FORMS/Obligaciones_proveedor.form
+++ b/src/FORMS/Obligaciones_proveedor.form
@@ -47,7 +47,9 @@
         </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
-            <LineBorder/>
+            <LineBorder>
+              <Color PropertyName="color" blue="ff" green="33" red="0" type="rgb"/>
+            </LineBorder>
           </Border>
         </Property>
       </Properties>
